--- a/manual/zh/blender/Camera.html
+++ b/manual/zh/blender/Camera.html
@@ -18,7 +18,7 @@
 
     <h2>在Blender中的设置</h2>
 
-    <p>只需将摄影机添加到场景中，并将其在<b>场景属性</b>中指定为 <em>活动</em>状态。</p><img src="files/camera-blender/active-camera.jpg" alt="为Verge3D for Blender设置活动摄影机" class="centered" style="max-width: 309px"><p>默认情况下，此摄像机将用于渲染场景，但您可以添加更多摄像机，并在运行时中使用<a href="manual/zh/puzzles/Camera.html#set_active_camera">设置活动摄像机</a>拼图来进行切换。</p>
+    <p>只需将摄影机添加到场景中，并将其在<b>场景属性</b>中指定为 <em>活动</em>状态。</p><img src="files/camera-blender/active-camera.jpg" alt="为Verge3D for Blender设置活动摄影机" class="centered" style="max-width: 309px"><p>默认情况下，此摄影机将用于渲染场景，但您可以添加更多摄影机，并在运行时中使用<a href="manual/zh/puzzles/Camera.html#set_active_camera">设置活动摄影机</a>拼图来进行切换。</p>
 
     <p>Verge3D支持以下摄影机类型：</p>
 
@@ -29,7 +29,7 @@
 
     [anchor:camera_settings]
 
-    <h2>摄像机设置</h2>
+    <h2>摄影机设置</h2>
 
     <p>Verge3D支持以下摄影机设置：</p><img src="files/camera-blender/camera-settings.jpg" alt="Verge3D for Blender中的摄影机设置" class="centered" style="max-width: 627px"><p>*Type* - 摄影机类型，透视或正交。</p>
 
@@ -69,7 +69,7 @@
 
     <p>*Collision Material* - 碰撞材质，是用于与摄影机产生碰撞的材质。</p>
 
-    <p>*Gaze Level* - 注视水平，第一人称摄像机的“注视”（或“头部” / “眼睛”）水平。</p>
+    <p>*Gaze Level* - 注视水平，第一人称摄影机的“注视”（或“头部” / “眼睛”）水平。</p>
 
     <p>*Story Height* - 楼层高度。</p>
 
