--- a/manual/zh/blender/Object-Constraints.html
+++ b/manual/zh/blender/Object-Constraints.html
@@ -45,6 +45,17 @@
 
     <p>此约束强制设置被应用的对象和目标的变换相匹配。</p><img src="files/constraints-blender/copy-transforms.jpg" class="centered" style="max-width: 383px">
 
+    [anchor:Limit_Distance]
+
+    <h3>限定距离</h3>
+    
+    <p>
+      此约束强制被约束对象与目标保持远离、靠近或者一个给定距离。换句话说，自身的位置被限制在以目标为中心的球体以外，以内或表面。
+    </p>
+    
+    <img src="files/constraints-blender/limit-distance.jpg" class="centered" style="max-width: 383px">
+
+
     [anchor:Limit_Location]
 
     <h3>限定位置</h3>
@@ -62,6 +73,16 @@
     <h3>限制缩放</h3>
 
     <p>此约束通过下限和上限限制了围绕每个轴的允许缩放量。</p><img src="files/constraints-blender/limit-scale.jpg" class="centered" style="max-width: 383px">
+
+    [anchor:Damped_Track]
+
+    <h3>Damped Track</h3>
+
+    <p>
+      约束 自身的一个本地(局部)轴总是指向 目标。该约束使用一个纯粹的摇摆旋转，亦即最短可能单轴旋转。在其他3D软件中对应的约束一般名为 "Look at(看着)" 。
+    </p>
+
+    <img src="files/constraints-blender/damped-track.jpg" class="centered" style="max-width: 383px">
 
     [anchor:Track_To]
 
