--- a/manual/zh/introduction/Puzzles-Visual-Logic-Editor.html
+++ b/manual/zh/introduction/Puzzles-Visual-Logic-Editor.html
@@ -174,47 +174,47 @@
       <tr>
         <td>
           <ul>
-            <li><a href='manual/en/puzzles/Initialization.html'>初始化</a></li>
-            <li><a href='manual/en/puzzles/Events.html'>事件｜Events</a></li>
-            <li><a href='manual/en/puzzles/Selectors.html'>选择器</a></li>
-            <li><a href='manual/en/puzzles/Objects.html'>对象 | Objects</a></li>
-            <li><a href='manual/en/puzzles/Materials.html'>材质 | Materials</a></li>
+            <li><a href='manual/zh/puzzles/Initialization.html'>初始化</a></li>
+            <li><a href='manual/zh/puzzles/Events.html'>事件｜Events</a></li>
+            <li><a href='manual/zh/puzzles/Selectors.html'>选择器</a></li>
+            <li><a href='manual/zh/puzzles/Objects.html'>对象 | Objects</a></li>
+            <li><a href='manual/zh/puzzles/Materials.html'>材质 | Materials</a></li>
           </ul>
         </td>
         <td>
           <ul>
-            <li><a href='manual/en/puzzles/Animation.html'>动画</a></li>
-            <li><a href='manual/en/puzzles/Camera.html'>摄影机</a></li>
-            <li><a href='manual/en/puzzles/Scenes.html'>场景 | Scenes</a></li>
-            <li><a href='manual/en/puzzles/Advanced.html'>高级</a></li>
-            <li><a href='manual/en/puzzles/Time.html'>时间</a></li>
+            <li><a href='manual/zh/puzzles/Animation.html'>动画</a></li>
+            <li><a href='manual/zh/puzzles/Camera.html'>摄影机</a></li>
+            <li><a href='manual/zh/puzzles/Scenes.html'>场景 | Scenes</a></li>
+            <li><a href='manual/zh/puzzles/Advanced.html'>高级</a></li>
+            <li><a href='manual/zh/puzzles/Time.html'>时间</a></li>
           </ul>
         </td>
         <td>
           <ul>
-            <li><a href='manual/en/puzzles/HTML.html'>HTML</a></li>
-            <li><a href='manual/en/puzzles/AR_VR.html'>AR/VR</a></li>
-            <li><a href='manual/en/puzzles/Sound.html'>音频/视频</a></li>
-            <li><a href='manual/en/puzzles/Physics.html'>物理（和约束）</a></li>
-            <li><a href='manual/en/puzzles/Postprocessing.html'>后期处理</a></li>
+            <li><a href='manual/zh/puzzles/HTML.html'>HTML</a></li>
+            <li><a href='manual/zh/puzzles/AR_VR.html'>AR/VR</a></li>
+            <li><a href='manual/zh/puzzles/Sound.html'>音频/视频</a></li>
+            <li><a href='manual/zh/puzzles/Physics.html'>物理（和约束）</a></li>
+            <li><a href='manual/zh/puzzles/Postprocessing.html'>后期处理</a></li>
           </ul>
         </td>
         <td>
           <ul>
-            <li><a href='manual/en/puzzles/Logic.html'>逻辑</a></li>
-            <li><a href='manual/en/puzzles/Loops.html'>循环 | Loops</a></li>
-            <li><a href='manual/en/puzzles/Text.html'>Text - 文本</a></li>
-            <li><a href='manual/en/puzzles/Numbers.html'>数字 | Numbers</a></li>
-            <li><a href='manual/en/puzzles/Lists.html'>列表 | List</a></li>
+            <li><a href='manual/zh/puzzles/Logic.html'>逻辑</a></li>
+            <li><a href='manual/zh/puzzles/Loops.html'>循环 | Loops</a></li>
+            <li><a href='manual/zh/puzzles/Text.html'>Text - 文本</a></li>
+            <li><a href='manual/zh/puzzles/Numbers.html'>数字 | Numbers</a></li>
+            <li><a href='manual/zh/puzzles/Lists.html'>列表 | List</a></li>
           </ul>
         </td>
         <td>
           <ul>
-            <li><a href='manual/en/puzzles/Dictionaries.html'>字典｜Dictionaries</a></li>
-            <li><a href='manual/en/puzzles/Variables.html'>变量｜Variables</a></li>
-            <li><a href='manual/en/puzzles/Procedures.html'>过程 | Procedures</a></li>
-            <li><a href='manual/en/puzzles/System.html'>系统</a></li>
-            <li><a href='manual/en/puzzles/Library.html'>库</a></li>
+            <li><a href='manual/zh/puzzles/Dictionaries.html'>字典｜Dictionaries</a></li>
+            <li><a href='manual/zh/puzzles/Variables.html'>变量｜Variables</a></li>
+            <li><a href='manual/zh/puzzles/Procedures.html'>过程 | Procedures</a></li>
+            <li><a href='manual/zh/puzzles/System.html'>系统</a></li>
+            <li><a href='manual/zh/puzzles/Library.html'>库</a></li>
           </ul>
         </td>
       </tr>
