--- a/manual/zh/max/Lighting-and-Rendering.html
+++ b/manual/zh/max/Lighting-and-Rendering.html
@@ -54,7 +54,7 @@
 
     <h3>光度学灯光</h3>
 
-    <p>光度学灯光通常与 <a href="manual/zh/max/Materials-Maps-Reference.html#Physical">物理材质</a>一起使用。Verge3D对此类灯光的表现通常以3ds Max的ART渲染器作为参考。此外，您可以使用物理相机 <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Rendering/files/GUID-E1A6D466-CABB-4C8A-97A9-0C191C69F9BD-htm.html" target="_blank">曝光控制</a> 设置来调整渲染的亮度和色彩范围。</p>
+    <p>光度学灯光通常与 <a href="manual/zh/max/Materials-Maps-Reference.html#Physical">物理材质</a>一起使用。Verge3D对此类灯光的表现通常以3ds Max的ART渲染器作为参考。此外，您可以使用物理摄影机 <a href="https://knowledge.autodesk.com/support/3ds-max/learn-explore/caas/CloudHelp/cloudhelp/2020/ENU/3DSMax-Rendering/files/GUID-E1A6D466-CABB-4C8A-97A9-0C191C69F9BD-htm.html" target="_blank">曝光控制</a> 设置来调整渲染的亮度和色彩范围。</p>
 
     [anchor:standard_lights]
 
@@ -361,7 +361,7 @@
     <p>Verge3D for 3ds Max支持以下曝光控制算法。</p>
 
     <ul>
-      <li><b>物理相机的曝光控制</b></li>
+      <li><b>物理摄影机的曝光控制</b></li>
       <li><b>对数曝光控制</b></li>
     </ul>
 
@@ -468,7 +468,7 @@
       <em>Visibility Breakpoints</em> 允许您根据 3D 视口宽度/高度或方向设置显示/隐藏内容。此功能最重要的用例 — 使场景适应不同的屏幕大小和方向。例如，您可能有两种不同的纵向和横向屏幕方向模型。
     </p>
     <p>
-      如果指定给当前摄像机，则尝试切换到场景中的备用摄像机（必须具有可用的Visibility Breakpoints），如果未找到备用摄像机，则不执行任何操作。
+      如果指定给当前摄影机，则尝试切换到场景中的备用摄影机（必须具有可用的Visibility Breakpoints），如果未找到备用摄影机，则不执行任何操作。
     </p>
 
     <p>
