--- a/manual/zh/maya/Camera.html
+++ b/manual/zh/maya/Camera.html
@@ -4,7 +4,7 @@
 <head>
   <title>用于Maya的Verge3D：使用摄影机 - Soft8Soft</title>
   <meta charset="utf-8">
-  <meta name="description" content="了解如何创建和控制用于Verge3D的Maya相机。" />
+  <meta name="description" content="了解如何创建和控制用于Verge3D的Maya摄影机。" />
   <base href="../../../" />
   <script src="page.js"></script>
   <link type="text/css" rel="stylesheet" href="page.css" />
@@ -21,7 +21,7 @@
 
     <h2>在Maya中的设置</h2>
 
-    <p>只需在场景中添加一个受支持的摄像机：</p>
+    <p>只需在场景中添加一个受支持的摄影机：</p>
 
     <ul>
       <li><b>摄影机</b> -因为此摄影机指定明确的目标，您应该用Maya的”<b>注视当前选择</b>“来设定该摄影机的兴趣中心点。</li>
@@ -58,7 +58,7 @@
 
     <p>*Collision Material* - <b>碰撞材质</b>，是用于与摄影机产生碰撞的材质。</p>
 
-    <p>*Gaze Level* - 注视水平，第一人称摄像机的“注视”（或“头部”/“眼睛”）水平。</p>
+    <p>*Gaze Level* - 注视水平，第一人称摄影机的“注视”（或“头部”/“眼睛”）水平。</p>
 
     <p>*Story Height* - <b>层高</b>，第一人称摄影机的楼层高度。</p>
 
