--- a/manual/zh/maya/Lighting-and-Rendering.html
+++ b/manual/zh/maya/Lighting-and-Rendering.html
@@ -202,7 +202,7 @@
     <p>默认情况下，Verge3D渲染的背景与您在Maya的视图中看到的一样（大多数情况下是灰色）。当使用基于图像的照明（由*aiSkyDomeLight*对象提供）时，您会看到环境纹理。</p>
 
 
-    <p>要将背景改为其他颜色，不要在Maya中编辑视图设置，只需更改主摄像机属性中环境<b>“背景色”</b>并启用Verge3D属性中的*Render Background*属性即可。</p><img
+    <p>要将背景改为其他颜色，不要在Maya中编辑视图设置，只需更改主摄影机属性中环境<b>“背景色”</b>并启用Verge3D属性中的*Render Background*属性即可。</p><img
       src="files/lighting-maya/render-background.jpg" class="centered" style="max-width: 443px">
     <p class="note">您可以使用Maya的<b>渲染视图</b>窗口或Verge3D的*Sneak Peek*功能来预览具有自定义背景的场景。</p>
 
@@ -408,7 +408,7 @@
       <em>Visibility Breakpoints</em> 允许您根据 3D 视口宽度/高度或方向设置显示/隐藏内容。此功能最重要的用例 — 使场景适应不同的屏幕大小和方向。例如，您可能有两种不同的纵向和横向屏幕方向模型。</p>
 
       <p>      
-      如果指定给当前摄像机，则尝试切换到场景中的备用摄像机（必须具有可用的Visibility Breakpoints），如果未找到备用摄像机，则不执行任何操作。
+      如果指定给当前摄影机，则尝试切换到场景中的备用摄影机（必须具有可用的Visibility Breakpoints），如果未找到备用摄影机，则不执行任何操作。
     </p>
     <p>
       您可以在 *Advanced Rendering* 面板上配置断点：
