--- a/manual/zh/programmers_guide/Programming-basics.html
+++ b/manual/zh/programmers_guide/Programming-basics.html
@@ -104,7 +104,7 @@
     <p>第三布，我们需要一个 <strong>Mesh(网格)</strong>。网格包含一个几何体以及作用在此几何体上的材质，我们可以直接将网格对象放入到我们的场景中，并让它在场景中自由移动。</p>
 
     <p>默认情况下，当我们调用 <strong>scene.add()</strong>时，我们添加的东西会添加到坐标上
-      <strong>(0,0,0)</strong>。这将导致摄影机和立方体进入彼此内部。为避免这种情况，我们只需要将摄像机稍微向外移动一些即可。</p>
+      <strong>(0,0,0)</strong>。这将导致摄影机和立方体进入彼此内部。为避免这种情况，我们只需要将摄影机稍微向外移动一些即可。</p>
 
     [anchor:rendering_scene]
 
