--- a/manual/zh/puzzles/AR_VR.html
+++ b/manual/zh/puzzles/AR_VR.html
@@ -101,7 +101,7 @@
       <dt>sitting or standing(坐着或站着)</dt>
       <dd>放置在离地面一定高度的不可移动的摄影机。</dd>
       <dt>room(房间模式)</dt>
-      <dd>移动摄像机位于某个范围内，如房间。</dd>
+      <dd>移动摄影机位于某个范围内，如房间。</dd>
       <dt>looking around(环顾四周)</dt>
       <dd>位于零坐标处的不移动的摄影机。</dd>
       <dt>walking(步行模式)</dt>
