--- a/manual/zh/puzzles/Lists.html
+++ b/manual/zh/puzzles/Lists.html
@@ -126,7 +126,7 @@
 
     <h3>is empty(为空)</h3>
 
-    <p>这个拼图检查一个指定的列表是否不包含任何项目，如果是，则返回*true*，否则返回*false*。与 <a href='manual/en/puzzles/Logic.html'>逻辑</a> 拼图一起使用。</p>
+    <p>这个拼图检查一个指定的列表是否不包含任何项目，如果是，则返回*true*，否则返回*false*。与 <a href='manual/zh/puzzles/Logic.html'>逻辑</a> 拼图一起使用。</p>
     
     <img src="files/puzzles/puzzles-lists-is-empty.jpg" style="max-width: 1000px">
 
