--- a/manual/zh/puzzles/Materials.html
+++ b/manual/zh/puzzles/Materials.html
@@ -61,13 +61,13 @@
         </li>
         <li>
           灵活的纹理输入 - 允许在 "texture(纹理)" 输入中使用 
-          <a href="manual/en/puzzles/Text.html#text">text puzzles(文字拼图)</a>
+          <a href="manual/zh/puzzles/Text.html#text">text puzzles(文字拼图)</a>
         </li>
         <li>
           使用 canvas/video alpha 为加载的画布和视频纹理启用/禁用透明度（如果存在）。注意：如果目标是使对象透明，请不要忘记也将材质类型设置为 *Blend(混合)*（请参见：
-          <a href="manual/en/blender/Transparency.html#transparency_eevee">Blender</a>/
-          <a href="manual/en/max/Transparency.html#blended_vs_masked">Max</a>/
-          <a href="manual/en/maya/Transparency.html#blended_vs_masked">Maya</a> 
+          <a href="manual/zh/blender/Transparency.html#transparency_eevee">Blender</a>/
+          <a href="manual/zh/max/Transparency.html#blended_vs_masked">Max</a>/
+          <a href="manual/zh/maya/Transparency.html#blended_vs_masked">Maya</a> 
           中的透明度）。
         </li>
       </ul>
