--- a/manual/zh/puzzles/Postprocessing.html
+++ b/manual/zh/puzzles/Postprocessing.html
@@ -75,7 +75,7 @@
 
     <ul>
       <li>*focus(对焦)* - 景深对焦距离。</li>
-      <li>*aperture(光圈)* - 相机光圈系数。</li>
+      <li>*aperture(光圈)* - 摄影机光圈系数。</li>
       <li>*maxblur(最大模糊)* - 景深模糊半径。</li>
       <li>*depth leak threshold(深度泄露阈值)* - 消除DOF距离伪影的阈值。</li>
     </ul>
@@ -94,9 +94,9 @@
 
     <p>
       <span style="color:#f00">已弃用。</span> 请在
-      <a href="manual/en/blender/Lighting-and-Rendering.html#ambient_occlusion">Blender</a> /
-      <a href="manual/en/max/Lighting-and-Rendering.html#ambient_occlusion">Max</a> /
-      <a href="manual/en/maya/Lighting-and-Rendering.html#ambient_occlusion">Maya</a> 中启用GTAO设置来替代。
+      <a href="manual/zh/blender/Lighting-and-Rendering.html#ambient_occlusion">Blender</a> /
+      <a href="manual/zh/max/Lighting-and-Rendering.html#ambient_occlusion">Max</a> /
+      <a href="manual/zh/maya/Lighting-and-Rendering.html#ambient_occlusion">Maya</a> 中启用GTAO设置来替代。
     </p>
       
     [anchor:simple_refraction]
