--- a/manual/zh/puzzles/Scenes.html
+++ b/manual/zh/puzzles/Scenes.html
@@ -46,7 +46,7 @@
     
     <img src="files/puzzles/puzzles-scenes-append-scene.jpg">
 
-    <p>在加载完成后，触发 "when loaded do" 插槽中的拼图。此外，还可以启用 "on progress do" 插槽。放在这个插槽里的拼图会在加载过程中被持续触发，并且可以利用 "percentage(百分比)" 拼图。默认情况下，"append scene(附加场景)" 拼图不会从新场景中加载摄像机和灯光。这一行为可以在拼图的选项中改变。</p>
+    <p>在加载完成后，触发 "when loaded do" 插槽中的拼图。此外，还可以启用 "on progress do" 插槽。放在这个插槽里的拼图会在加载过程中被持续触发，并且可以利用 "percentage(百分比)" 拼图。默认情况下，"append scene(附加场景)" 拼图不会从新场景中加载摄影机和灯光。这一行为可以在拼图的选项中改变。</p>
 
     <p>场景被加附加时会被分配一个名称，可用于通过各种与对象相关的拼图来访问和操作场景。默认情况下，指定的场名称等于指定的场景URL（例如："path/to/scene.gltf" ）。如果启用 "alias(别名)" 选项，就可以手动设置名称。</p>
 
